# django-tutoial

./: .gitignore  .unibeautifyrc.json  Dockerfile  docker-compose.yml  make_env.sh  pyproject.toml  readme.md  requirements.txt  setup.cfg
.devcontainer/: Dockerfile.develop  devcontainer.json  docker-compose.develop.yml  docker-compose.yml
app/: Dockerfile
containers/app/: Dockerfile  app.env  entrypoint.sh
containers/db/: Dockerfile  db.env
containers/develop/: Dockerfile
tutorial/polls/: models.py
tutorial/polls/migrations/: 0001_initial.py
tutorial/polls/templates/polls/: detail.html  results.html
tutorial/tutorial/: settings.py  urls.py
