[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["ishuzaks <k.suzuki512+develop@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
